src/test/ui/span/type-binding.stderr
error[E0220]: associated type `Trget` not found for `Deref`
  --> $DIR/type-binding.rs:6:20
   |
LL | fn homura<T: Deref<Trget = i32>>(_: T) {}
   |                    ^^^^^ help: did you mean `Target`? (a similarly named associated type)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0220`.
